[package]
name = "webadb"
version = "0.1.0"
authors = ["Hajime Fukuda <haji.fkd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { path = "../wasm-bindgen/" }
js-sys = { path = "../wasm-bindgen/crates/js-sys" }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
futures = "0.3"
async-stream = "0.3"
byteorder = "1"
derive-try-from-primitive = "1"
rsa = "0.3.0"
num-bigint = { version = "0.6", package = "num-bigint-dig" }
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3.45"
path = "../wasm-bindgen/crates/web-sys"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Node',
  'Window',
  'Navigator',
  'AllowedUsbDevice',
  'Usb',
  'UsbAlternateInterface',
  'UsbConfiguration',
  'UsbConnectionEvent',
  'UsbConnectionEventInit',
  'UsbControlTransferParameters',
  'UsbDevice',
  'UsbDeviceFilter',
  'UsbDeviceRequestOptions',
  'UsbDirection',
  'UsbEndpoint',
  'UsbEndpointType',
  'UsbInTransferResult',
  'UsbInterface',
  'UsbIsochronousInTransferPacket',
  'UsbIsochronousInTransferResult',
  'UsbIsochronousOutTransferPacket',
  'UsbIsochronousOutTransferResult',
  'UsbOutTransferResult',
  'UsbPermissionDescriptor',
  'UsbPermissionResult',
  'UsbPermissionStorage',
  'UsbRecipient',
  'UsbRequestType',
  'UsbTransferStatus',
]

[dev-dependencies]
#wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
debug = true